--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <link href="/css/default.css" rel="stylesheet">
     <link rel="icon" type="image/x-icon" href="/favicon.ico">
     <link rel="shortcut icon" type="image/x-icon" href="/favicon.ico">
-    <title>/V/gach - Anonymous playboard</title>
+    <title>/vg/ach - Anonymous playboard</title>
   </head>
   <body>
     <h3>Coming soon...</h3>
